--- a/meccsek.html
+++ b/meccsek.html
@@ -55,7 +55,7 @@ nav {
     border-bottom: 1px solid var(--border); z-index: 2000; 
 }
 .logo { font-family: 'Orbitron'; font-weight: 900; font-size: 1.4rem; color: var(--neon-blue); letter-spacing: 3px; }
-
+.nav-tools { display: flex; align-items: center; gap: 12px; }
 /* --- Elrendezés --- */
 .main-wrapper { display: flex; margin-top: 75px; min-height: calc(100vh - 75px); width: 100%; }
 
@@ -101,9 +101,13 @@ nav {
 
 /* --- MECCSKÁRTYA & TEAM GLOW/ROTATE --- */
 .match-card {
-    background: rgba(30, 41, 59, 0.4); border: 1px solid var(--border); border-radius: 24px;
-    padding: 30px; margin-bottom: 20px; display: flex; flex-direction: column; gap: 20px;
-}
+        background: rgba(30, 41, 59, 0.4); border: 1px solid var(--border); border-radius: 24px;
+        padding: 25px; margin-bottom: 15px; display: flex; flex-direction: column; gap: 20px;
+        transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .match-card:hover { border-color: var(--neon-blue); background: rgba(30, 41, 59, 0.6); transform: translateY(-4px); }
+
+    .match-info-row { display: flex; align-items: center; justify-content: space-between; width: 100%; }
 
 .team-link { flex: 1; display: flex; flex-direction: column; align-items: center; gap: 12px; cursor: pointer; }
 .team-link img { width: 60px; height: 60px; object-fit: contain; transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
@@ -128,7 +132,14 @@ nav {
     margin-bottom: 20px; display: flex; align-items: center; gap: 10px;
     text-transform: uppercase; letter-spacing: 2px;
 }
-
+tool-btn { 
+        background: rgba(255,255,255,0.05); border: 1px solid var(--border);
+        color: var(--text); padding: 10px 16px; border-radius: 10px;
+        cursor: pointer; font-family: 'Orbitron'; font-size: 11px; transition: 0.3s;
+        display: flex; align-items: center; justify-content: center;
+    }
+    .tool-btn:hover { border-color: var(--neon-blue); background: rgba(14, 165, 233, 0.2); }
+        
 .standings-table { width: 100%; border-collapse: separate; border-spacing: 0 4px; }
 .standings-table th { font-size: 10px; color: rgba(255,255,255,0.4); padding: 10px; text-align: center; font-family: 'Orbitron'; }
 .standings-table td { background: rgba(255,255,255,0.03); padding: 12px 8px; font-size: 12px; text-align: center; }
@@ -1590,6 +1601,7 @@ function handleLeagueClick(id) {
     </script>
 </body>
 </html>
+
 
 
 
